fix mvn test