@@ -13,13 +13,17 @@
         <common.lang.version>3.9</common.lang.version>
         <common.collections.version>4.4</common.collections.version>
         <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
+        <junit.version>5.5.1</junit.version>
+        <surefire.plugin.version>3.0.0-M4</surefire.plugin.version>
+        <compiler.plugin.version>3.8.1</compiler.plugin.version>
+        <jdk.version>11</jdk.version>
     </properties>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.5.1</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
@@ -58,9 +62,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>${compiler.plugin.version}</version>
                 <configuration>
-                    <release>11</release>
+                    <release>${jdk.version}</release>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
@@ -68,6 +72,14 @@
                             <version>${lombok.version}</version>
                         </path>
                     </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${surefire.plugin.version}</version>
+                <configuration>
+                    <argLine>--add-opens io.xiaofeng.offlinefoldereditor/io.xiaofeng.offlinefoldereditor=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
         </plugins>
